--- a/manifest.json
+++ b/manifest.json
@@ -25,7 +25,7 @@
         "styles.css"
       ],
 	 "all_frames": true,
-	 "run_at": "document_start"	  
+	 "run_at": "document_idle"	  
     }
   ],
   "options_page": "options.html",
